trunk/Archive2/a3/45c522c155f4a4/output
main.cpp: In function ‘void a()’:
main.cpp:3:6: error: redefinition of ‘void a()’
 void a(void) {
      ^
main.cpp:1:6: note: ‘void a()’ previously defined here
 void a(void) {
      ^
